<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/empty_list"
        android:paddingBottom="20dip"
        android:id="@+id/empty_call_list"
            />
    <Button
            android:id="@+id/show_contacts"
            android:background="@drawable/btn_default_transparent"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
           android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/do_call"
            android:textColor="@android:color/white"
            android:drawableLeft="@android:drawable/sym_action_call"
            android:drawablePadding="5dip"
            />

        <Button
                android:id="@+id/btn_help"
                android:background="@drawable/btn_default_transparent"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:drawableLeft="@android:drawable/ic_menu_help"
                android:drawablePadding="5dip"
                />
    </LinearLayout>

